--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=cinedev
 #Conexion MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/cinedevtest?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=250401juan
+spring.datasource.password=Ma260891
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
